Continue clearing up spacing issues to make the desktop version the correct size.

--- a/responsive.css
+++ b/responsive.css
@@ -57,7 +57,11 @@
   }
 
   .heroSection {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: flex-start;
     width: 768px;
+    height: 664px;
   }
 
   .topSectionBackground {
