--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-/* * {
+* {
   outline: 1px solid #f00 !important;
-} */
+}
 
 #topSection {
-  max-width: 64rem;
+  width: 64rem;
+  height: 532px;
   order: 0;
+  z-index: 0;
 }
 
 .topSectionContent {
@@ -12,10 +14,10 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 0rem;
-  position: absolute;
-  width: 64rem;
-  /* height: 33.25rem; */
-  height: 38.5625rem;
+  position: relative;
+  width: 1008px;
+  height: 33.25rem;
+  /* height: 38.5625rem; */
   left: 0rem;
   top: 0rem;
   z-index: 1;
@@ -25,8 +27,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* padding: 0.625rem 1.875rem; */
-  padding: 0.625rem 0rem;
+  box-sizing: border-box;
+  padding: 0.625rem 1.875rem;
+  /* padding: 0.625rem 0rem; */
   width: 64rem;
   height: 5.375rem;
   flex-grow: 0;
@@ -115,11 +118,12 @@ nav {
 .heroSection {
   display: flex;
   align-items: flex-start;
-  /* padding: var(--size-40) var(--size-30) 0rem; */
-  padding: var(--size-40) 0rem;
+  padding: var(--size-40) var(--size-30) 0rem;
+  box-sizing: border-box;
+  /* padding: var(--size-40) 0rem; */
   gap: var(--size-10);
   width: 64rem;
-  /* height: 27.875rem; */
+  height: 27.875rem;
   flex: none;
   order: 1;
   flex-grow: 0;
@@ -351,7 +355,10 @@ nav {
 }
 
 #topSectionBackground {
-  width: 64rem;
+  position: absolute;
+  left: 1px;
+  top: -1px;
+  width: 1008px;
   height: 32.3125rem;
 }
 
@@ -365,7 +372,7 @@ nav {
   height: 655px;
   order: 1;
   z-index: 1;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 .benefitsTitle {
@@ -568,8 +575,9 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  /* padding: 0rem var(--size-30) var(--size-80); */
-  padding: 0rem 0rem var(--size-80);
+  box-sizing: border-box;
+  padding: 0rem var(--size-30) var(--size-80);
+  /* padding: 0rem 0rem var(--size-80); */
   gap: var(--size-10);
   width: 64rem;
   height: 34.375rem;
@@ -794,10 +802,10 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0rem 0rem 5rem;
+  padding: 0rem 0rem 5rem 1.875rem;
   /* padding: 0rem 1.875rem 5rem; */
   gap: 0.625rem;
-  width: 64rem;
+  width: 1008px;
   height: 31.0625rem;
   z-index: 5;
   order: 5;
@@ -855,7 +863,7 @@ nav {
   padding: 0rem;
   gap: 3.75rem;
   width: 64rem;
-  /* height: 35rem; */
+  height: 35rem;
   z-index: 6;
   order: 6;
   /* flex-wrap: wrap; */
@@ -897,9 +905,10 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  box-sizing: border-box;
   padding: 0rem 1.875rem 0rem 0rem;
   gap: 0.3125rem;
-  width: 32rem;
+  width: 31rem;
   height: 35rem;
   order: 1;
 }
@@ -1483,8 +1492,8 @@ nav {
   display: flex;
   align-items: flex-start;
   padding: 0rem;
-  width: 64rem;
-  /* height: 44.25rem; */
+  width: 1008px;
+  height: 44.25rem;
   background: #20335b;
   order: 9;
   z-index: 9;
@@ -1496,6 +1505,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  box-sizing: border-box;
   padding: 0rem 0rem 0rem 4.375rem;
   gap: 3.75rem;
   width: 32.1563rem;
@@ -1672,6 +1682,7 @@ nav {
   box-sizing: border-box;
   flex-direction: column;
   align-items: flex-start;
+  box-sizing: border-box;
   padding: 1.875rem;
   gap: 0.625rem;
   width: 32.1563rem;
@@ -1955,7 +1966,7 @@ footer {
   /* padding: 5rem 1.875rem 2.5rem; */
   padding: 5rem 0rem 2.5rem;
   gap: 2.5rem;
-  width: 64rem;
+  width: 1008px;
   height: 33.8125rem;
   order: 10;
   z-index: 10;
